replace SNAPSHOT w/ FNAL

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.dcache</groupId>
-    <version>4.2.14-SNAPSHOT</version>
+    <version>4.2.14-FNAL</version>
     <artifactId>dcache-parent</artifactId>
     <packaging>pom</packaging>
 
@@ -1136,8 +1136,9 @@
                     <injectAllReactorProjects>true</injectAllReactorProjects>
                     <useNativeGit>false</useNativeGit>
                     <gitDescribe>
+		        <skip>true</skip>
                         <always>true</always>
-                        <dirty>+dirty+${user.name}</dirty>
+                     <!--   <dirty>+dirty+${user.name}</dirty> -->
                     </gitDescribe>
                 </configuration>
             </plugin>
