pool: allow margin option on sweeper when reclaiming space
Motivation:

Greedily reclaiming an extra percentage of free
space when the sweeper is triggered can serve to
reduce the number of calls to the sweeper on busy pools
that are near capacity.

Modification:

Add property and also admin command; also
implement CellSetupProvider to write this
property to the pool setup file.

On the basis of the property, expressed
as a percentage of total free space,
add the amount to the number of bytes
returned by waitForRequests().

Result:

Fewer calls to sweeper and better
I/O performance on the pools.

Target: master
Requires-notes: yes
Requires-book: no
Patch: https://rb.dcache.org/r/11945
Acked-by: Lea

--- a/skel/share/defaults/pool.properties
+++ b/skel/share/defaults/pool.properties
@@ -122,6 +122,21 @@ pool.limits.nearline-threads=30
 # Worker thread pool to scan and check metadata from the pool repository.
 pool.limits.scan-threads=1
 
+# ---- Adjust the greediness of LRU removal of cached files when requested
+#      space exceeds free space.
+#
+#      This value expresses a minimum of space (as a percentage of the
+#      total size of the pool), in addition to that of the needed space for the
+#      file, which should be reclaimed whenever the sweeper is triggered
+#      because there is not enough free space.
+#
+#      The default value means the sweeper will try to remove just enough
+#      space to accommodate the file.  Setting the value somewhat higher
+#      can serve to reduce the number of calls to the sweeper on busy pools
+#      that are near capacity.
+#
+pool.limits.sweeper-margin=0.0
+
 # Pool cell name. Currently this has to be the same as the pool name.
 pool.cell.name=${pool.name}
 
