--- a/docs/UserGuide/pom.xml
+++ b/docs/UserGuide/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.dcache</groupId>
     <artifactId>documentation</artifactId>
-    <version>5.2.37-SNAPSHOT</version>
+    <version>5.2.26-FNAL</version>
   </parent>
 
   <artifactId>UserGuide</artifactId>
