--- a/modules/gplazma2-banfile/pom.xml
+++ b/modules/gplazma2-banfile/pom.xml
@@ -4,7 +4,7 @@
   <parent>
       <groupId>org.dcache</groupId>
       <artifactId>dcache-parent</artifactId>
-      <version>5.2.37-SNAPSHOT</version>
+      <version>5.2.26-FNAL</version>
       <relativePath>../../pom.xml</relativePath>
   </parent>
 
