--- a/modules/gplazma2-scitoken/pom.xml
+++ b/modules/gplazma2-scitoken/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.dcache</groupId>
         <artifactId>dcache-parent</artifactId>
-        <version>5.2.37-SNAPSHOT</version>
+        <version>5.2.26-FNAL</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
