--- a/packages/fhs/pom.xml
+++ b/packages/fhs/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.dcache</groupId>
         <artifactId>packaging</artifactId>
-        <version>5.2.37-SNAPSHOT</version>
+        <version>5.2.26-FNAL</version>
     </parent>
 
     <artifactId>dcache-fhs</artifactId>
@@ -156,7 +156,7 @@
                                 <configuration>
                                     <name>rpm.version</name>
                                     <value>${project.version}</value>
-                                    <regex>-SNAPSHOT</regex>
+                                    <regex>-FNAL</regex>
                                     <replacement>.\${git.commit.id.abbrev}</replacement>
                                     <failIfNoMatch>false</failIfNoMatch>
                                 </configuration>
@@ -263,7 +263,7 @@
                                 <configuration>
                                     <name>deb.version</name>
                                     <value>${project.version}</value>
-                                    <regex>-SNAPSHOT</regex>
+                                    <regex>-FNAL</regex>
                                     <replacement>~\${git.commit.id.describe}</replacement>
                                     <failIfNoMatch>false</failIfNoMatch>
                                 </configuration>
